--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a graphics and web designer. I have been working as a designer for the past 4 years and am looking to up my game. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Raleigh, North Carolina. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I my free time I enjoy baking and decorating cakes. I make my own cake, icing and fondant from scratch. I do everything from disguise cakes, wedding cake to birthday cakes. It's a nice way to get out from behind the computer and do something that brings people joy. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I want a job that let me do a bit of everything from developement to deisgn, but secretly I have always wanted to be the grapics deisnger that gets to create the images for a late night comedy show. Like The Daily Show or Weekend Update on SNL. Some of the photoshop images their designers get to create seem like it would be a lot of fun.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Raleigh, NC with my husband, Brian and our two dogs.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>In my current job I design and build wordpress sites. It has been a good introduction, but I feel like I can do more with my career if I could handle the backend development as well as the frontend. I don't think many designers have development skills and I don't think most developers are interested in doing too much with design, so being able to do both would put me in a good position to market myself better. </p>
     </section>
 
     <footer id="footer">
